--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://SohailAhammed.github.io/JOBTRACKER08",
+  "homepage": "https://SundeepGanta123.github.io/JOBTRACKER08",
   "scripts": {
     "start": "vite",
     "dev": "vite",
